--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,24 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  min-width: 200px;
 }
 
 li {
   list-style-type: none;
+}
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0; /* Remove default padding */
+}
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.todo-list {
+  display: flex;
+  justify-content: center;
 }
